# smart-legal-assistant

./: .gitignore  Dockerfile  README.md  experiment.ipynb  file.py  pyproject.toml  render.yaml  requirements.txt  template.py
src/SmartLegalAssistant/: exception.py
src/SmartLegalAssistant/app/: config.py  main.py
src/SmartLegalAssistant/app/components/: __init__.py  answer_display.py  references.py  sidebar.py  user_input.py
src/SmartLegalAssistant/app/services/: __init__.py  rag_service.py
src/SmartLegalAssistant/app/utils/: __init__.py  highlighting.py  session.py  styling.py
src/SmartLegalAssistant/config/: config.py
src/SmartLegalAssistant/core/: answer_generator.py  embeddings.py  llm.py  reranker.py  retriever.py  vector_store.py
src/SmartLegalAssistant/streamlit_app/: app.py  config.py
src/SmartLegalAssistant/streamlit_app/.streamlit/: config.toml
src/SmartLegalAssistant/streamlit_app/components/: __init__.py  follow_up.py  main_view.py  sidebar.py
src/SmartLegalAssistant/streamlit_app/styles/: custom.css
src/SmartLegalAssistant/streamlit_app/utils/: __init__.py  formatting.py  session.py
src/SmartLegalAssistant/utils/: exception.py  logger.py  prompt_templates.py
